added more to everything

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,8 @@
     </div>
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="static/app.js"></script> -->
+    <script src="/Ubuntu/home/meyburdj/personal_projects/elaWorkSheets//static/app.js"></script>
 </body>
 
 </html>
