--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
             <form id="url-api-method" class="d-none">
                 <p class="first">Please enter the URL of website with desired article.</p>
 
-                <input type="text" placeholder="URL" />
-                <button>Enter</button>
+                <input type="text" id="url-submit-form" placeholder="URL" />
+                <button id="url-submit-btn">Enter</button>
             </form>
         </div>
         <div id="worksheet-container">
@@ -46,7 +46,9 @@
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <!-- <script src="static/app.js"></script> -->
-    <script src="/Ubuntu/home/meyburdj/personal_projects/elaWorkSheets//static/app.js"></script>
+    <!-- <script src="/Ubuntu/home/meyburdj/personal_projects/elaWorkSheets//static/app.js"></script> -->
+    <script src="static/app.js"></script>
+
 </body>
 
 </html>
