--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <!-- <script src="static/app.js"></script> -->
     <!-- <script src="/Ubuntu/home/meyburdj/personal_projects/elaWorkSheets//static/app.js"></script> -->
+    <script src="static/models.js"></script>
     <script src="static/app.js"></script>
 
 </body>
