--- a/templates/test.html
+++ b/templates/test.html
@@ -1,49 +1,22 @@
-<html>
-<!DOCTYPE html>
-<html lang="en">
+{%extends 'base.html'%}
 
-<head>
-    <link href="app.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="container">
-        <div class="response-question-text row col-10">
-            <textarea class="form-control response-question-input " type="text"
-                placeholder="Enter question here"></textarea>
-            <textarea class="form-control response-question-input " type="text"
-                placeholder="Enter first answer option here"></textarea>
-            <textarea class="form-control response-question-input " type="text"
-                placeholder="Enter second answer option here"></textarea>
-            <textarea class="form-control response-question-input " type="text"
-                placeholder="Enter third answer option here"></textarea>
-            <textarea class="form-control response-question-input " type="text"
-                placeholder="Enter fourth answer option here"></textarea>
-
-            <div class="row">
-                <div class="col-sm-10">
-                    <button id="response-question-add-btn" type="button">Add question</button>
-                    <button id="response-question-undo-btn" type="button">I don't want this question</button>
-                </div>
-            </div>
-
-        </div>
+{%block content%}
+<form>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-    <script src="https://unpkg.com/jquery"></script>
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
-    <!-- <script src="static/app.js"></script> -->
-    <!-- <script src="/Ubuntu/home/meyburdj/personal_projects/elaWorkSheets//static/app.js"></script> -->
-    <script src="static/app.js"></script>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
-</body>
-
-</html>
-
-</html>
+{%endblock%}
