finishing off worksheet functionality and connecting to database

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
+<div class="container" id="final-worksheet-container">
     <h1 class="d-flex justify-content-center title">ELA Worksheet Generator</h1>
 
     <div id="input-methods">
