--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container top-container">
 
         {% for category, message in get_flashed_messages(with_categories=True) %}
         <div class="alert alert-{{ category }}">{{ message }}</div>
